Scaffolded billing api
