# libs/data-access/apis/billing-api/src/lib/model/patchBillingCommand.ts
@@ -1,0 +1,20 @@
+/**
+ *  Billing Api 
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface PatchBillingCommandBillingModel { 
+    id?: number;
+    name?: string | null;
+    observations?: string | null;
+    receptionDate?: string | null;
+    workId?: number | null;
+    amount?: number | null;
+}
+
